# QuantumHackathon

./: README.md  app.py  pyproject.toml  quantum_utils.py  requirements.txt  utils.py
data/: Dataset_EBI-2.csv  full-dataset.csv  original-dataset.csv  reduceddataset.csv
models/: classical_model.joblib  classical_model.py  quantum_model.py
